--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Wits SRC Connect</string>
+    <string name="log_in_helper">Log in as:</string>
+    <string name="student">Student</string>
+    <string name="src_member">SRC Member</string>
+    <string name="username">Username:</string>
+    <string name="password">Password:</string>
+    <string name="log_in">Log In</string>
 </resources>
