--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,12 @@
     <string name="username">Username:</string>
     <string name="password">Password:</string>
     <string name="log_in">Log In</string>
+    <string name="reg_guide">Don\'t have an account? Sign up</string>
+
+    <string name="stud_num">Student Number:</string>
+    <string name="name">Name:</string>
+    <string name="last_name">Last Name:</string>
+    <string name="confirm_pass">Confirm Password:</string>
+    <string name="register">Register</string>
+    <string name="reg_stud">Register Student</string>
 </resources>
