added a item on navigation view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="reg_stud">Register Student</string>
     <string name="home">Home</string>
     <string name="log_out">Log Out</string>
+    <string name="src_activity_time_line">SRC Activities Timeline</string>
 </resources>
