replaced src post activity bottom sheet with an activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="src_activity_time_line">SRC Activities Timeline</string>
     <string name="src_post_activity">Post Activity</string>
     <string name="activity">Activity</string>
+    <string name="title">Title</string>
+    <string name="src_polls">SRC Polls</string>
 </resources>
