--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="activity">Activity</string>
     <string name="title">Title</string>
     <string name="src_polls">SRC Polls</string>
+    <string name="poll_activity">Poll Activity</string>
 </resources>
