--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,9 @@
     <string name="comment">Comment</string>
     <string name="view_comments">view Comments</string>
     <string name="student_anonymity">Anonymous Comment</string>
+    <string name="poll_desc">Poll Description</string>
+    <string name="src_post_poll">Post Poll</string>
+    <string name="poll_type">Poll Type:</string>
+    <string name="single_select_desc">Single Select\nWhen selected this allows students to select only one option when voting</string>
+    <string name="multi_select_desc">Multi Select\nWhen selected this allows students to select more than one option when voting</string>
 </resources>
