--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="single_select_desc">Single Select\nWhen selected this allows students to select only one option when voting</string>
     <string name="multi_select_desc">Multi Select\nWhen selected this allows students to select more than one option when voting</string>
     <string name="add_option">add option</string>
+    <string name="vote">vote</string>
 </resources>
