--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="vote">vote</string>
     <string name="update">Update</string>
     <string name="delete">Delete</string>
+    <string name="update_activity">Update Activity</string>
 </resources>
